SoupSession: clarify timeout and idle-timeout docs

They only affect connections opened after you set the property.

https://bugzilla.gnome.org/show_bug.cgi?id=681781